fix #14 Design base.html

--- a/jobplus/templates/base.html
+++ b/jobplus/templates/base.html
@@ -3,11 +3,77 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="static/main.css">
+        {% block head_css %}
+        <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <style type="text/css">
+            html, body {width:100%;height:100%;}
+            .bg {display: table;width: 100%;height: 100%;padding: 100px 0;text-align: center;color: #fff;background: url(https://github.com/jlinbb/jlinbb_image/blob/master/jobplus/dooley%20_3NCA3tbaE5Il.jpg?raw=true) no-repeat bottom center;background-color: #000;background-size: cover;}
+            .my-navbar {padding:20px 0;transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;}
+            .my-navbar a{background:transparent !important;color:#fff !important}
+            .my-navbar a:hover {color:#45bcf9 !important;background:transparent;outline:0}
+            .my-navbar a {transition: color 0.5s ease-in-out;}
+            .top-nav {padding:0;background:#000;}
+            button.navbar-toggle {background-color:#fbfbfb;}
+            button.navbar-toggle > span.icon-bar {background-color:#dedede}
+        </style>
+        {% endblock %}
     </head>
+
     <body>
-      {% block body %}{% endblock %}
-      {% block footer %}{% endblock %}
-      <script src="static/main.js"></script>
-    </body>    
+      <nav class="navbar navbar-fixed-top my-navbar" role="navigation">
+          <div class="container-fluid">
+
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">Jobplus</a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">职位<span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">公司<span class="sr-only">(current)</span></a></li>
+                        <!-- <li><a href="#">控制台</a></li> -->
+
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">用户注册</a></li>
+                        <li><a href="#">企业注册</a></li>
+                        <li><a href="#">登录</a></li>
+
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+
+      <div class="bg"></div>
+
+      <div class="container-fluid header">
+        {% block head %}{% endblock %}
+      </div>
+
+      <div class="container">
+          {% block body %}{% endblock %}
+      </div>
+
+      {% block tail_js %}
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+          <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          <script src="static/main.js"></script>
+          <script>
+            $(window).scroll(function () {
+                if ($(".navbar").offset().top > 50) {$(".navbar-fixed-top").addClass("top-nav");
+                }else {$(".navbar-fixed-top").removeClass("top-nav");}
+            })
+          </script>
+      {% endblock %}
+    </body>
+
 </html>
