--- a/jobplus/templates/index.html
+++ b/jobplus/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
 
 {% block body %}
-主页
+<div class="col-md-6 col-xs-12">
+  <div class="page-header">
+      <h4>最新公司</h4>
+  </div>
+</div>
+<div class="col-md-6 col-xs-12">
+  <div class="page-header">
+      <h4>最新职位</h4>
+  </div>
+</div>
 {% endblock %}
 
